update blogpost launch

--- a/_posts/2017-08-01-hello.md
+++ b/_posts/2017-08-01-hello.md
@@ -1,19 +1,36 @@
 ---
 layout: post
-title: Online, online
+title: Launch: Die Demokratielabore stellen sich vor!
 author: Jasmin
-excerpt: Es geht los. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+excerpt: 
 images:
-  - imgname: online.gif
+  - imgname: illustration.png
 published: true
 ---
 
+Die Lebens- und Erfahrungswelt von Jugendlichen in Deutschland ist geprägt von der digitalen Revolution: Viele Bereiche des öffentlichen und privaten Lebens spielen sich online ab, prägen unsere Beziehungen und unser Zusammenleben in der Gesellschaft. In Zeiten von Hate Speech, Fake News und Populismus, auch im Netz, wird klar, dass es für Jugendliche gar nicht so einfach ist, digital mündig zu sein. Gleichzeitig wird es aber immer wichtiger, sich in Fragen des gesellschaftlichen Zusammenlebens aktiv einzumischen.
 
+### Unsere Vision
 
-![wikidata-crew](/assets/blog/online.gif)
+Vor diesem Hintergrund haben wir die **[Demokratielabore](https://demokratielabore.de)** ins Leben gerufen: Ein Modellprojekt, das vom Bundesministerium für Familie, Senioren, Frauen und Jugend im Rahmen des Bundesprogramms [“Demokratie leben!”](https://www.demokratie-leben.de/) gefördert wird und Jugendlichen im Alter von 12 bis 21 Jahren Spaß an digitalen Werkzeugen, Technologien und gesellschaftlichen Prozessen vermitteln will. Wir wollen die öffentlichen Diskurse in unserer alternden Gesellschaft wieder um die Perspektiven Jugendlicher bereichern und gemeinsam das Internet als positiven Gestaltungsraum zurückerobern. Indem wir die Verbindung zwischen digitaler, sozialer und demokratischer Teilhabe junger Menschen stärken, wollen wir sie dabei unterstützen, aktive Gestalter*innen unserer Gesellschaft zu sein. 
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.  orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+### Es wird bunt, laut & unkonventionell
 
-orem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At 
+Um das zu schaffen, haben wir verschiedene [Angebote](https://demokratielabore.de/angebote) entwickelt:
+
+**Workshops**: Gemeinsam mit außerschulischen Jugendeinrichtungen in ganz Deutschland  führen wir unterschiedliche spielerische Workshop- und Aktionsformate durch, z.B. “Escape Populism” - ein Spiel, bei dem die Teilnehmenden aus einem Raum nur durch das gemeinsame Lösen von Aufgaben entkommen können.  
+
+**Train-the-Trainer**: Damit die Workshops keine einmalige Sache bleiben, geben wir unser Wissen an die Mitarbeiter*innen und Jugendlichen vor Ort weiter und helfen ihnen dabei, die Formate schnell und einfach selbst durchzuführen und auf ihre Bedürfnisse anzupassen. Dazu stehen sowohl personelle als auch finanzielle Ressourcen zur Verfügung. 
+
+**Demokratie-AGs**: Wenn Jugendliche nach den Workshops Lust haben, auch weiterhin an gesellschaftlichen und digitalen Themen zu arbeiten, unterstützen wir sie gerne dabei, kleine (oder große) Arbeitsgemeinschaften in ihren Jugendclubs aufzubauen und zu betreuen. Ein erstes Thema könnte die Bundestagswahl sein. Die Idee: Gemeinsam Wahl(daten)parties planen!
+
+**WebTV-Channel**: Wir wollen in einem WebTV-Format wöchentlich gemeinsam mit verschiedenen Partnern, z.B. aus der netzpolitischen Szene, und interessierten Jugendlichen in einem eigenen YouTube-Kanal Sendungen zu digitalen, technologischen und gesellschaftlichen Themen produzieren. 
+
+**Bedarfsanalyse & Workshop für überregionale Bildungsinitiativen**: Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit, auf eine Reise durch die Welt der Daten zu gehen: Bei unserem Workshop lernen Mitarbeiter*innen Tipps, Tricks und Tools für ihre digitalen Projekte kennen. Unsere Bedarfsanalyse zum Thema Daten und Digitalisierung untersucht, welche digitalen Arbeitsweisen sich im Bildungsbereich etablieren und welche Herausforderungen noch gemeistert werden müssen. 
+
+### Werdet Teil der Demokratielabore & macht mit!
+
+Wir wollen mit Jugendlichen, Jugendeinrichtungen & Bildungsverbänden in ganz Deutschland zusammenarbeiten -  egal ob in der Stadt oder auf dem Land, im Problembezirk oder Vorzeigeviertel, Couchpotato oder Actionheld/in: **Jede/r ist bei uns willkommen!**  
+Schreibt uns dazu am besten einfach eine Mail an *info@demokratielabore.de*, wir melden uns bei euch so schnell es geht und planen gemeinsam das weitere Vorgehen. Wir freuen uns auf euch! :)
 
 <blockquote class="twitter-tweet" data-partner="tweetdeck"><p lang="de" dir="ltr">Alle Tiere und Pflanzen mit Unicodesymbol <a href="https://twitter.com/hashtag/okwiki?src=hash">#okwiki</a> <a href="https://t.co/8Qem4fm3fl">https://t.co/8Qem4fm3fl</a></p>&mdash; 95P (@NearBeteigeuze) <a href="https://twitter.com/NearBeteigeuze/status/805059238217318400">December 3, 2016</a></blockquote>
