update licence blogposts all

--- a/_posts/2018-05-14-leuchtfeuer2018.md
+++ b/_posts/2018-05-14-leuchtfeuer2018.md
@@ -4,7 +4,9 @@ author: Lea, Paula & Leo
 date: 2018-05-14
 excerpt: 
 images:
-  - imgname: leuchtfeuer2018.jpg
+  - 
+  imgname: leuchtfeuer2018.jpg
+  sub: "<a href='https://creativecommons.org/licenses/by/4.0/'>CC-BY-4.0</a>, OKF DE, Foto: Lea Pfau"
 published: true
 title: "Das digitale Leuchtfeuer"
 ---
